<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="app_name" translatable="false">Network Scheduler</string>

    <!-- Global switch on/off -->
    <string name="global_switch_on_toast">Network Scheduler is enabled</string>
    <string name="global_switch_off_toast">Network Scheduler is completely disabled</string>

    <!-- Edit period -->
    <string name="name_hint">Name (optional)</string>
    <string name="on">on</string>
    <string name="off">off</string>
    <string name="next_day">next day</string>
    <string name="everyday">Everyday</string>
    <string name="never">Never</string>
    <string name="interval_text">Interval connection</string>
    <string name="mobile_data">Mobile data</string>
    <string name="wifi">Wi-Fi</string>
    <string name="bluetooth">Bluetooth</string>
    <string name="volume_on">Ringer sound</string>
    <string name="volume_with_vibrate">Vibrate when silent</string>
    <string name="missing_MobData">Missing Mobile Data?</string>
    <string name="interval_connect_disabling_period">Interval connection is not possible when switch-off is before switch-on</string>

    <!-- ? next to interval connection in edit period: -->
    <string name="interval_connection_help_content_desc">Show help on interval connection</string>
    <string name="explain_interval_connection_title">Interval Connection</string>
    <string name="explain_interval_connection_intro">This option saves battery and reduces data usage while %1$s is enabled</string>
    <string name="explain_interval_connection_mob_text">Interval connection turns off %1$s when the device sleeps and only re-connects every %2$s min for %3$s min (interval and duration can be changed in settings) to fetch new messages. Depending on the \'Switch-on when unlocking\' setting it is also turned on when the device is unlocked.</string>
    <string name="explain_interval_connection_wifi_text">Interval connection turns off %1$s when the device sleeps and only re-connects every %2$s min for %3$s min (interval and duration can be changed in settings) to fetch new messages. Depending on the \'Switch-on when unlocking\' setting it is also turned on when the device is unlocked.</string>
    <string name="explain_interval_connection_bt_text">Interval connection enables bluetooth only for %3$s min to allow pairing. If the device is not paired with another bluetooth device after %3$s min the bluetooth radio is disabled for %2$s min to save battery (interval and duration can be changed in settings). Bluetooth is also turned on when the device is unlocked during the active period.</string>
    <string name="close_dialog">Close</string>

    <!-- Context menu actions -->
    <string name="modify">Edit</string>
    <string name="is_period_enabled">Enabled</string>
    <string name="activate_now">Activate now (switch ON)</string>
    <string name="deactivate_now">Deactivate now (switch OFF)</string>
    <string name="activate_now_off">Activate now (switch OFF)</string>
    <string name="deactivate_now_on">Deactivate now (switch ON)</string>
    <string name="delete">Delete</string>
    <string name="skip_next_occurrence">Skip next occurrence</string>
    <string name="context_menu_interval_wifi">Wi-Fi interval connection</string>
    <string name="context_menu_interval_mob">Mobile data interval connection</string>
    <string name="move_up">Move up</string>
    <string name="move_down">Move down</string>

    <!-- Context menu toasts -->
    <string name="skipped_period">The next time period will be skipped</string>
    <string name="unskipped_period">The next time period will be activated normally</string>
    <string name="overridden_wifi_interval">For this period Wi-Fi interval connection was stopped</string>
    <string name="unoverridden_wifi_interval">Wi-Fi interval connection was resumed</string>
    <string name="overridden_mob_interval">For this period mobile data interval connection was stopped</string>
    <string name="unoverridden_mob_interval">Mobile data interval connection was resumed</string>
    <string name="enabled_period_checking">The period is active, enabling %1$s</string>
    <string name="disabled_period_checking">The period is active, disabling %1$s</string>

    <!-- Switch-off notifications when screen is on -->
    <string name="notification_channel_name_switchoff">Switch-off</string>
    <string name="notification_channel_name_autodelay">Auto-delayed switch-off</string>
    <string name="switch_off_notification_title">Switching off network</string>
    <string name="switch_off_shortly">"Switching off shortly: "</string>
    <string name="not_today">not today</string>
    <string name="switch_off_skipped_today">Switch off skipped today</string>
    <string name="switch_off_now">switch off now</string>
    <string name="connections_switched_off">Network connections switched off</string>
    <string name="switch_off_auto_delayed">Switch-off auto-delayed</string>
    <string name="switch_off_delayed_until">Switch off delayed until %s</string>
    <string name="switch_off_auto_delayed_until">Delayed until %s because device was in use</string>

    <!-- Help -->
    <string name="help">Help</string>
    <string name="help_url" translatable="false">https://sites.google.com/site/networkscheduler/learn-more</string>
    <string name="help_url_knownissues" translatable="false">https://sites.google.com/site/networkscheduler/known-issues</string>

    <!-- Settings -->
    <string name="settings">Settings</string>

    <!-- Unlock policy -->
    <string name="pref_key_unlock_policy_preferences" translatable="false">pref_key_unlock_policy_preferences</string>
    <string name="pref_key_unlock_policy_wifi" translatable="false">pref_key_unlock_policy_wifi</string>
    <string name="pref_key_unlock_policy_mob" translatable="false">pref_key_unlock_policy_mob</string>
    <string name="pref_title_unlock_policy">Switch-on when unlocking</string>
    <string name="explain_unlock_policy_prefs">Configure whether Wi-Fi / mobile data should be automatically enabled when the screen is turned on and unlocked</string>
    <string name="pref_dialog_title_unlock_policy_wifi">Switch-on Wi-Fi</string>
    <string name="pref_dialog_title_unlock_policy_mob">Switch-on mobile data</string>
    <string name="unlock_policy_never">Never</string>
    <string name="unlock_policy_when_active">During active periods</string>
    <string name="unlock_policy_always">Always</string>

    <!-- Interval Connection -->
    <string name="pref_key_interval_connect_preferences" translatable="false">pref_key_interval_connect_preferences</string>
    <string name="settings_title_interval_connect">Interval Connection</string>
    <string name="explain_interval_connection_prefs">Interval connection saves battery during active periods. It turns off Wi-Fi / mobile data when the device sleeps and only re-connects at regular intervals for a short while to fetch new messages.</string>
    <string name="pref_summary_intervalconnect_group">Connect every %1$s minutes for %2$s minutes (if specified in active period)</string>
    <string name="pref_summary_intervalconnect_group_singular">Connect every %1$s minutes for %2$s minute (if specified in active period)</string>
    <string name="pref_key_connect_interval" translatable="false">pref_key_connect_interval</string>
    <string name="pref_title_connect_interval">Connect interval: %s min</string>
    <string name="pref_summary_connect_interval">Only connect every %s minutes for the short connection duration specified below</string>
    <string name="pref_dialog_title_connect_interval">Interval (min)</string>
    <string name="pref_key_connect_duration" translatable="false">pref_key_connect_duration</string>
    <string name="pref_title_connect_duration">Connection duration: %s min</string>
    <string name="pref_summary_connect_duration">Connect for %s minutes to fetch messages</string>
    <string name="pref_summary_connect_duration_singular">Connect for 1 minute to fetch messages</string>
    <string name="pref_dialog_title_connect_duration">Duration (min)</string>
    <string name="pref_title_interval_connect_wifi_keep_connected">Keep Wi-Fi connected</string>
    <string name="pref_summary_interval_connect_wifi_keep_connected">Interval connection will not switch-off Wi-Fi when connected to a hot-spot (e.g. at home)</string>
    <string name="pref_title_interval_connect_suspend_charging">Suspend when charging</string>
    <string name="pref_summary_interval_connect_suspend_charging">Interval connection will be suspended and not switch-off Wi-Fi or mobile data when charging</string>

    <!-- Switch-off Notification -->
    <string name="settings_title_notifications">Switch-Off Notification when Screen on</string>
    <string name="pref_title_warn_vibrate">Vibrate</string>
    <string name="pref_summary_warn_vibrate">Vibrate to make sure the switch-off warning is not missed e.g. when watching a full-screen video</string>
    <string name="pref_title_warn_sound">Play sound</string>
    <string name="pref_summary_warn_sound">Play the notification sound to make sure the switch-off warning is not missed</string>
    <string name="pref_key_delay_min" translatable="false">pref_key_delay_min</string>
    <string name="pref_title_delay_min">Switch-off delay: %s min</string>
    <string name="pref_summary_delay_min">Deactivation can be delayed by %s minutes in the switch-off notification</string>
    <string name="pref_dialog_title_delay_min">Switch-off delay (minutes)</string>
    <string name="pref_title_no_switchoff_unlocked">Auto-delay if screen on</string>
    <string name="pref_summary_no_switchoff_unlocked">Automatically delay the switch-off if the screen is on</string>

    <!-- Logging -->
    <string name="settings_title_logging">Logging</string>
    <string name="pref_key_logging_enable" translatable="false">pref_key_logging_enable</string>
    <string name="pref_title_logging_enable">Enable logging</string>
    <string name="pref_summary_logging_enable">Write all actions to a log file</string>
    <string name="pref_key_logging_show" translatable="false">pref_key_logging_show</string>
    <string name="pref_title_logging_show">Show log</string>
    <string name="pref_summary_logging_show">Open the log file with the text editor of your choice</string>
    <string name="pref_key_logging_delete" translatable="false">pref_key_logging_delete</string>
    <string name="pref_title_logging_delete">Delete log</string>
    <string name="pref_summary_logging_delete">Delete the log file (%sKB)</string>
    <string name="log_file_deleted">Log file deleted</string>

    <!-- Toasts -->
    <string name="change_ringer_granted">Permission granted, you can now change the ringer mode</string>
    <string name="change_ringer_denied">Permission to change ringer mode was denied. Ringer mode cannot be changed!</string>

    <!-- Snack bar -->
    <string name="snack_whitelist_from_optimizations">For correct scheduling exclude Network Scheduler from battery optimizations in Android Settings.\nAdditional permissions required are \'run at startup\' for auto-start after reboot and pop-up notifications for switch-off notifications.</string>
</resources>