<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:background="@drawable/background_enabled_period" >

    <TextView
        android:id="@+id/TextViewName"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentLeft="true"
        android:layout_toLeftOf="@+id/topLine"
        android:textAppearance="?android:attr/textAppearanceLarge"
        android:textSize="24sp"
        android:typeface="sans" />

    <LinearLayout
        android:id="@+id/topLine"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentRight="true"
        android:layout_alignParentTop="true"
        android:layout_marginLeft="16dp"
        android:gravity="center_vertical"
        android:orientation="horizontal"
        android:textSize="24sp"
        android:typeface="sans" >

        <ImageView
            android:id="@+id/imageViewWifi"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:contentDescription="@string/wifi"
            android:src="@drawable/ic_action_wifi" />

        <ImageView
            android:id="@+id/imageViewMobileData"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:contentDescription="@string/mobile_data"
            android:src="@drawable/ic_action_mobile_data" />

        <ImageView
            android:id="@+id/imageViewBluetooth"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:contentDescription="@string/bluetooth"
            android:src="@drawable/ic_action_bluetooth1" />

        <ImageView
            android:id="@+id/imageViewVolume"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:contentDescription="@string/volume_on"
            android:src="@drawable/ic_action_volume_up" />
    </LinearLayout>

    <TextView
        android:id="@+id/TextViewStopTime"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@id/TextViewName"
        android:layout_toRightOf="@+id/textViewOff"
        android:textAppearance="?android:attr/textAppearanceLarge"
        android:textSize="32sp"
        android:typeface="sans" />

    <TextView
        android:id="@+id/textViewOn"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignBaseline="@+id/textViewStartTime"
        android:layout_alignBottom="@+id/textViewStartTime"
        android:layout_alignLeft="@+id/TextViewName"
        android:ellipsize="marquee"
        android:singleLine="false"
        android:text="@string/on"
        android:textColor="@android:color/white"
        android:textSize="12sp" />

    <TextView
        android:id="@+id/textViewStartTime"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignBottom="@+id/textViewOff"
        android:layout_below="@id/TextViewName"
        android:layout_marginRight="12dp"
        android:layout_toRightOf="@+id/textViewOn"
        android:textAppearance="?android:attr/textAppearanceLarge"
        android:textSize="32sp"
        android:typeface="sans" />

    <TextView
        android:id="@+id/textViewOff"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignBaseline="@+id/TextViewStopTime"
        android:layout_alignBottom="@+id/TextViewStopTime"
        android:layout_toRightOf="@+id/textViewStartTime"
        android:ellipsize="marquee"
        android:singleLine="false"
        android:text="@string/off"
        android:textColor="@android:color/white"
        android:textSize="12sp" />

    <TextView
        android:id="@+id/bottomLine"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignLeft="@+id/textViewOn"
        android:layout_below="@+id/TextViewStopTime"
        android:gravity="center_vertical"
        android:textColor="@android:color/white"
        android:textSize="20sp"
        android:typeface="sans" />

    <TextView
        android:id="@+id/text_start_nextday"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignBaseline="@+id/textViewOff"
        android:layout_toRightOf="@+id/TextViewStopTime"
        android:paddingLeft="6dp"
        android:textAppearance="?android:attr/textAppearanceSmall"
        android:textColor="@android:color/white" />

    <LinearLayout
        android:id="@+id/bottomButtons"
        android:clickable="false"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        android:layout_alignParentRight="true"
        android:layout_marginLeft="16dp"
        android:gravity="center_vertical"
        android:orientation="horizontal"
        android:textSize="24sp"
        android:typeface="sans" >

        <Button
            android:id="@+id/buttonSkip"
            style="?android:attr/buttonStyleSmall"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:focusable="false"
            android:layout_marginRight="8dp"
            android:maxHeight="18dip"
            android:maxWidth="18dip"
            android:minHeight="18dip"
            android:minWidth="18dip" />

        <Button
            android:id="@+id/buttonOn"
            style="?android:attr/buttonStyleSmall"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:focusable="false"
            android:layout_marginRight="8dp"
            android:maxHeight="18dip"
            android:maxWidth="18dip"
            android:minHeight="18dip"
            android:minWidth="18dip" />

        <ImageButton
            android:id="@+id/buttonEdit"
            style="?android:attr/buttonStyleSmall"
            android:layout_width="20dp"
            android:layout_height="20dp"
            android:background="@drawable/ic_action_edit"
            android:focusable="false"
            android:maxWidth="18dip"
            android:maxHeight="18dip"
            android:minWidth="18dip"
            android:minHeight="18dip" />

        <ImageButton
            android:id="@+id/buttonContextMenu"
            style="?android:attr/actionOverflowButtonStyle"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:focusable="false"
            android:maxWidth="18dip"
            android:maxHeight="18dip"
            android:minWidth="18dip"
            android:minHeight="18dip" />
    </LinearLayout>

</RelativeLayout>